# ibroker

./: .gitmodules  CMakeLists.txt  README.md
broker/: CMakeLists.txt  main.cpp
cmake/: Coverage.cmake  Warnings.cmake
lib/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  ConnectionHandler.cpp  ConnectionHandler.h  GlobalDefinitions.h  Logger.cpp  Logger.h  Message.cpp  Message.h  MessagePacket.h  MessageQueue.h  Queue.cpp  Queue.h  QueueManager.cpp  QueueManager.h  TemplateHelpers.h
tests/: CMakeLists.txt  connection_handler_test.cpp  serialize_test.cpp
